Fix for grey gap in the blue/green CSS blobs in chats
The grey gap was being created due to the relative sizes of the css
elements myavatar, myright, otheravatar, otherright.
Depending on the font size, and due to round ups, the elements ended with
a gap between them, resolving to the grey line.
The fix moves one of the elements slighly and works with newer versions of
Qt.

Test-Information:

Tested with with windows (qt5.4.2), Windows (qt5.7), Linux (qt5.5)

--- a/Swift/resources/themes/Default/main.css
+++ b/Swift/resources/themes/Default/main.css
@@ -113,6 +113,8 @@ div.time {
     background-color: #92c47e;
     border-top-left-radius: 50%;
     border-bottom-left-radius: 50%;
+    position: relative;
+    left: 1px;
 }
 
 .otheravatar {
@@ -123,20 +125,22 @@ div.time {
     background-color: #6eb6ce;
     border-top-left-radius: 50%;
     border-bottom-left-radius: 50%;
+    position: relative;
+    left: 1px;
 }
 
 .myavatar img {
     border-radius: 50%;
     height: 2.5em;
     position: relative;
-    left: -1px;
+    left: -2px;
 }
 
 .otheravatar img {
     border-radius: 50%;
     height: 2.5em;
     position: relative;
-    left: -1px;
+    left: -2px;
 }
 
 .myright {
